force-app/main/default/objects/Project__c/fields/Image_1__c.field-meta.xml
<CustomField>
    <fullName>Image_1__c</fullName>
    <label>Image 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>