force-app/main/default/objects/Project__c/fields/Image_3__c.field-meta.xml
<CustomField>
    <fullName>Image_3__c</fullName>
    <label>Image 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>