force-app/main/default/objects/Project__c/fields/Project_Website__c.field-meta.xml
<CustomField>
    <fullName>Project_Website__c</fullName>
    <label>Project Website</label>
    <type>Url</type>
</CustomField>